--- a/_config.yml
+++ b/_config.yml
@@ -164,7 +164,12 @@ contact_note: >
 # Collections
 # -----------------------------------------------------------------------------
 
-# collections:
+collections:
+  item:
+    defaults:
+      layout: post
+    output: true
+    permalink: /schedule/:path/
 #   news:
 #     defaults:
 #       layout: post
